welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:17: error: ')' expected but 'else' found.
  else if(message == "A")
  ^